publish: grammer fixes.
generated from commit c1a41df98bebb92aff0fbbe6f5c5409412246e7e

--- a/example-smart-app/src/css/example-smart-app.css
+++ b/example-smart-app/src/css/example-smart-app.css
@@ -1,1 +1,12 @@
-th,td{padding:5px;text-align:left}body{margin:0}#holder{display:none}
+th, td {
+  padding: 5px;
+  text-align: left;
+}
+
+body {
+  margin: 0;
+}
+
+#holder {
+  display: none;
+}
